# micrograd

./: README.md  pyproject.toml
