[tool.poetry]
name = "micrograd"
version = "0.1.0"
description = "Implementation of karpathy's migrograd"
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
matplotlib = "^3.6.3"

[tool.poetry.dev-dependencies]
ruff = "^0.0.231"
black = "^22.12.0"
pytest = "^7.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
